# prometheus-kafka

./: .gitignore  Cargo.toml  README.md  build.rs
payload/: empty.json  large.json  medium.json
proto/: transport.proto
src/: main.rs  server.rs
src/grpc/: convert.rs  reader.rs
src/kafka/: storage.rs  writer.rs
src/utils/: argparse.rs  logging.rs
