[package]
name = "prometheus-kafka"
version = "0.1.0"
edition = "2018"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "prometheus-kafka-server"
path = "src/main.rs"

[dependencies]
jemallocator = "0.3"
structopt = "0.3"
futures = "0.3"
hex = "0.4"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
env_logger = "0.8.4"
clap = "3"
rdkafka = { version = "0.26", features = ["ssl"] }
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
log = "0.4"

[build-dependencies]
tonic-build = "0.5"
