[package]
name = "prometheus-kafka"
version = "0.1.0"
edition = "2018"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "prometheus-kafka-server"
path = "src/main.rs"

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = "thin"
debug = false
incremental = false
overflow-checks = false

[dependencies]
jemallocator = "0.3"
mimalloc = { version = "0.1.27", default-features = false }
snmalloc-rs = "0.2"

tokio = { version = "1.15", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tonic = { version = "0.6", features = ["prost"] }
prost = "0.9"
rdkafka = { version = "0.28.0", features = ["ssl"] }

structopt = "0.3"
futures = { version = "0.3" }
hex = "0.4"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
env_logger = "0.9"
clap = "3"
log = "0.4"

[build-dependencies]
tonic-build = "0.5"
